--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+    <a href="juego.html">JUEGO</a>
     <div class="left">
       <div class="top-row">
         <div class="dato1">DATO 1</div>
